gke/collab-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Define the Deployment name
  name: collab-deployment
  labels:
    app: collab
spec:
  # Specify the number of desired Pods
  replicas: 1
  # Define how the Deployment finds which Pods to manage
  selector:
    matchLabels:
      app: collab
  # Define template for Pods
  template:
    metadata:
      labels:
        app: collab
    spec:
      # Container details
      containers:
        - name: collab-deployment
          image: gcr.io/cs3219-g28-peerprep/collab:latest
          ports:
            - name: collab-http
              containerPort: 8003
          resources:
            limits:
              cpu: 50m
              memory: 200Mi
